[gd_scene load_steps=3 format=2]

[ext_resource path="res://mapaMundi/code/dootLevel.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[node name="dootLevel" type="Area2D"]
script = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_dootLevel_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_dootLevel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_dootLevel_mouse_exited"]
